<resources>
    <string name="app_name">Book Store</string>
    <string name="book_name">Book Name</string>
    <string name="price">Price</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="qty">qty</string>
    <string name="quantity">Quantity</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="delete_all_books">Delete All Books</string>
    <string name="insert_books">Insert Books</string>
    <string name="error">Error with saving book</string>
    <string name="saved">book saved with row id: </string>
    <string name="add_some_inventory">Add books to inventory</string>
    <string name="delete_rows"> rows deleted from pet database</string>
    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="editor_activity_title_edit_book">Edit Book Info</string>
    <string name="editor_insert_book_failed">Error saving Book</string>
    <string name="editor_insert_book_successful">Book Saved</string>
    <string name="editor_update_book_failed">Book update failed</string>
    <string name="editor_update_book_successful">Book Updated Successful</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="cancel">Cancel</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="editor_delete_book_failed">Error deleting book</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="not_supported">Insertion is not supported for </string>
    <string name="no_query">Cannot query unknown URI </string>
    <string name="product_name_requires">Product name requires</string>
    <string name="filed_requires">Book Name Required</string>
    <string name="price_requires">Book price requires</string>
    <string name="quantity_requires">Book quantity required</string>
    <string name="supplier_name_requires">Supplier Name required</string>
    <string name="supplier_phone_requires">Supplier Phone required</string>
    <string name="product_quantity">Quantity</string>
    <string name="no_name">Books name is required</string>
    <string name="no_price">Books price is required</string>
    <string name="no_qty">Books qty is required</string>
    <string name="no_sName">Suppliers name is required</string>
    <string name="no_sPhone">Suppliers phone is required</string>
    <string name="fail_insert">Failed to insert row for </string>
    <string name="not_support">Update is not supported for </string>
    <string name="delete_support">Deletion is not supported for </string>
    <string name="unknown">Unknown URI</string>
    <string name="product_detail">Product detail</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_view">Produce View</string>
    <string name="quantity_change_msg">Quantity was change</string>
    <string name="quantity_finish_msg">Product was finish :( , buy another Product</string>
    <string name="insert_failed">Error with saving product</string>
    <string name="insert_successful">Product saved successfully</string>
    <string name="update_failed">Error with updating product</string>
    <string name="delete_product_successful">Product deleted</string>
    <string name="delete_product_failed">Error with deleting Product</string>
</resources>
